--- a/www/index.html
+++ b/www/index.html
@@ -72,49 +72,53 @@
 			"data": [
 				{
 					"name": "root",
-					"children": [{
-						"name": "黑龙江",
-						"children": [{
-							"name": "哈尔滨",
-							"value": 1200
+					"children": [
+						{
+							"name": "黑龙江",
+							"children": [
+								{
+									"name": "哈尔滨",
+									"value": 1200
+								}, {
+									"name": "大庆",
+									"value": 1500
+								}
+							]
 						}, {
-							"name": "大庆",
-							"value": 1500
-						}]
-					}, {
-						"name": "广东",
-						"children": [{
-							"name": "广州"
+							"name": "广东",
+							"children": [{
+								"name": "广州"
+							}, {
+								"name": "深圳",
+								"value": 3600
+							}, {
+								"name": "珠海",
+								"value": 2700
+							}]
 						}, {
-							"name": "深圳",
-							"value": 3600
+							"name": "台湾",
+							"children": [{
+								"name": "台北",
+								"value": 800
+							}, {
+								"name": "高雄",
+								"value": 600
+							}]
 						}, {
-							"name": "珠海",
-							"value": 2700
-						}]
-					}, {
-						"name": "台湾",
-						"children": [{
-							"name": "台北",
-							"value": 800
-						}, {
-							"name": "高雄",
-							"value": 600
-						}]
-					}, {
-						"name": "新疆",
-						"children": [{
-							"name": "乌鲁木齐",
-							"value": 300
-						}]
-					}]
+							"name": "新疆",
+							"children": [{
+								"name": "乌鲁木齐",
+								"value": 300
+							}]
+						}
+					]
 				}
 			],
 			"top": "20%",
 			"left": "7%",
 			"bottom": "20%",
 			"right": "20%",
-			"symbolSize": [50, 50],
+			"symbolSize": [100, 50],
 
 			itemStyle: {
 				color: "white"
@@ -124,7 +128,7 @@
 			"animationDuration": 550,
 			"animationDurationUpdate": 750,
 			"orient": "vertical",
-			"symbol": "roundRect"
+			"symbol": "Rect"
 
 
 
