--- a/www/index.html
+++ b/www/index.html
@@ -57,9 +57,9 @@
 						</el-table-column>
 						<el-table-column prop="bookName" label="bookName" width="180">
 						</el-table-column>
-						<el-table-column prop="bookLeftNum" label="bookAuthor">
+						<el-table-column prop="bookAuthor" label="bookAuthor">
 						</el-table-column>
-						<el-table-column prop="bookAuthor" label="bookLeftNum">
+						<el-table-column prop="bookLeftNum" label="bookLeftNum">
 						</el-table-column>
 						<el-table-column prop="bookTotalNum" label="bookTotalNum">
 						</el-table-column>
