--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,9 @@
 				<div width="200px">
 					<el-button type="danger" @click="deleteItem">清除库存</el-button>
 				</div>
+				<div width="200px">
+					<el-button type="primary" @click="getItem">查询</el-button>
+				</div>
 				<!-- </el-col> -->
 			</el-aside>
 			<el-container>
@@ -196,6 +199,22 @@
 				).then(function (res) {
 					console.log(res);
 					_this.updateEchart();
+				}).catch(function (error) { // 请求失败处理
+					console.log(error);
+				});
+			},
+			getItem() {
+				//发送 post 请求
+				var _form = JSON.stringify(this.form);
+				console.log(_form);
+				_this = this;
+				axios.post(
+					'http://localhost:7998/getItem',
+					_form
+				).then(function (res) {
+					console.log(res);
+
+					alert(JSON.stringify(res.data));
 				}).catch(function (error) { // 请求失败处理
 					console.log(error);
 				});
